// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Tab inside a component correctly 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist"
         class="van-tabs__nav van-tabs__nav--line"
    >
      <div role="tab"
           class="van-tab"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          2
        </span>
      </div>
      <div role="tab"
           class="van-tab van-tab--active"
           aria-selected="true"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          1
        </span>
      </div>
      <div role="tab"
           class="van-tab"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          3
        </span>
      </div>
      <div class="van-tabs__line"
           style="transform: translateX(0px) translateX(-50%);"
      >
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel"
         class="van-tab__pane"
         style
    >
      1
    </div>
    <div role="tabpanel"
         class="van-tab__pane"
         style="display: none;"
    >
    </div>
    <div role="tabpanel"
         class="van-tab__pane"
         style="display: none;"
    >
    </div>
  </div>
</div>
`;

exports[`should render correctly after inserting a tab 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist"
         class="van-tabs__nav van-tabs__nav--line"
    >
      <div role="tab"
           class="van-tab"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          1
        </span>
      </div>
      <div role="tab"
           class="van-tab van-tab--active"
           aria-selected="true"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          2
        </span>
      </div>
      <div role="tab"
           class="van-tab"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          3
        </span>
      </div>
      <div class="van-tabs__line"
           style="transform: translateX(0px) translateX(-50%); transition-duration: 0.3s;"
      >
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel"
         class="van-tab__pane"
         style="display: none;"
    >
    </div>
    <div>
      <div role="tabpanel"
           class="van-tab__pane"
      >
        2
      </div>
    </div>
    <div role="tabpanel"
         class="van-tab__pane"
         style="display: none;"
    >
      3
    </div>
  </div>
</div>
`;

exports[`should render correctly after inserting a tab with name 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist"
         class="van-tabs__nav van-tabs__nav--line"
    >
      <div role="tab"
           class="van-tab"
           aria-selected="false"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          bar
        </span>
      </div>
      <div role="tab"
           class="van-tab van-tab--active"
           aria-selected="true"
      >
        <span class="van-tab__text van-tab__text--ellipsis">
          foo
        </span>
      </div>
      <div class="van-tabs__line"
           style="transform: translateX(0px) translateX(-50%); transition-duration: 0.3s;"
      >
      </div>
    </div>
  </div>
  <div class="van-tabs__content">
    <div role="tabpanel"
         class="van-tab__pane"
         style="display: none;"
    >
      bar
    </div>
    <div role="tabpanel"
         class="van-tab__pane"
         style
    >
      foo
    </div>
  </div>
</div>
`;

exports[`should render nav-bottom slot correctly 1`] = `
<div class="van-tabs van-tabs--line">
  <div class="van-tabs__wrap">
    <div role="tablist"
         class="van-tabs__nav van-tabs__nav--line"
    >
      <div class="van-tabs__line">
      </div>
    </div>
  </div>
  Nav Bottom
  <div class="van-tabs__content">
  </div>
</div>
`;
